# sgDevice

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  dependencies.fish
doc/: sgDevice_doc.pd
pd_objs/: sdEvent_filterByIndex.pd  sdKeyboardEvents.pd  sdKeyboardModes_obj.pd  sdKeyboardModes_ui.pd  sdKeyboard_obj.pd  sdPianoEvents.pd  sdPiano_obj.pd  sgDevice-help.pd  sgDevice-test.pd  sgDeviceEvents.pd  sgDeviceModes_obj.pd  sgDeviceModes_ui.pd  sgDeviceToInterface.pd  sgDevice_obj.pd
presentation/: presentation_notes.odt  slides.odp
protolayout/: sgDevice2.fzz
scripts/: arduino_upload.fish  arduino_upload_usb_firmware.fish  arduino_usbdump.fish  build.fish  doc_debug_midi.fish  doc_init.fish  doc_run.fish  exit.fish  init.fish  local_init.fish  local_run.fish  midi_set_device_name.fish  ttymidi
src/arduino/sgDevice/: Constants.h  sgDevice.ino
src/arduino/sgDevice_ver2/: Constants_ver2.h  sgDevice_ver2.ino
src/arduino/test/: test.ino
src/global/: Constants.h  Constants_ver2.h  Global.h
src/sgDevice/: sgDevice.c  sgDevice.h  sgDevice2_impl.c  sgDevice2_impl.h  sgDevice_impl.c  sgDevice_impl.h  sgDevice_template.h
